--- a/py-deployment.yml
+++ b/py-deployment.yml
@@ -19,9 +19,9 @@ spec:
           driver: secrets-store.csi.k8s.io
           readOnly: true
           volumeAttributes:
-            secretProviderClass: "eks-secret-credentials" 
+            secretProviderClass: "eks_secret_credentials" 
       containers:
-        - name: wy-py-con
+        - name: byeol-py-con
           image: 655088038759.dkr.ecr.ap-northeast-2.amazonaws.com/byeol-redispy:3
           envFrom:
           - secretRef:
